--- a/AngularApp/src/app/availability/detector-view/detector-view-problem/detector-view-problem.component.html
+++ b/AngularApp/src/app/availability/detector-view/detector-view-problem/detector-view-problem.component.html
@@ -6,7 +6,7 @@
 
 <!-- Abnormal Time Periods Found -->
 <div *ngIf="!loading && abnormalTimePeriods && abnormalTimePeriods.length > 0">
-    <div class="focus-box focus-box" [ngClass]="{'focus-box-warning': !isHealthyNow || true }" style="background-color: #fff7ee" *ngIf="!loading">
+    <div class="focus-box focus-box" [ngClass]="{'focus-box-warning': !isHealthyNow || true }" *ngIf="!loading">
         <h4 class="not-bold" *ngIf="isHealthyNow && !highlightedDowntime">
                 {{detectorFriendlyName}} Detected {{abnormalTimePeriods.length > 1 ? 'Multiple Times ' : '' }}in Last 24 Hours
         </h4>
