--- a/AngularApp/src/app/availability/problem-solution/problem-solution.component.html
+++ b/AngularApp/src/app/availability/problem-solution/problem-solution.component.html
@@ -29,7 +29,8 @@
                         </td>
                         <td>{{event.message}}</td>
                         <td style="white-space: nowrap">
-                            <a (click)="detectorViewClick(event)">More Info
+                            <a class="btn btn-link" (click)="detectorViewClick(event)">
+                                More Info
                                 <i class="fa fa-arrow-circle-o-right" style="font-size: 15px"></i>
                             </a>
                         </td>
