--- a/AngularApp/src/app/shared/components/downtime-timeline/downtime-timeline.component.css
+++ b/AngularApp/src/app/shared/components/downtime-timeline/downtime-timeline.component.css
@@ -69,10 +69,9 @@ td, th {
 .time-label {
     padding-right: 10px;
     padding-left: 10px;
-    background-color: #949494;
+    background-color: #f3f3f3;
     border: 1px solid #848484;
-    border-right: none;
-    color: white;
+    color: #131313;
 }
 
 .time-value {
