--- a/AngularApp/src/app/shared/components/tools/network-trace-tool/network-trace-tool.component.html
+++ b/AngularApp/src/app/shared/components/tools/network-trace-tool/network-trace-tool.component.html
@@ -64,7 +64,7 @@
 
         <div style="margin-top:20px;">
             Choose duration to collect the Network Trace
-            <select [(ngModel)]="duration" [disabled]="status >= NetworkTraceStatus.Starting">
+            <select [attr.aria-label]="'select duration'" [(ngModel)]="duration" [disabled]="status >= NetworkTraceStatus.Starting">
                 <option value="60">60 seconds</option>
                 <option value="120">2 minutes</option>
                 <option value="180">3 minutes</option>
