--- a/AngularApp/src/app/supportbot/message-flow/category-menu/category-menu.component.css
+++ b/AngularApp/src/app/supportbot/message-flow/category-menu/category-menu.component.css
@@ -9,7 +9,7 @@
 
 .category {
     width: 180px;
-    background-color: #59b4d9;
+    background-color: #4085a0;
     color: white;
     padding: 10px;
     text-align: center;
