--- a/AngularApp/src/app/home/components/home/home.component.html
+++ b/AngularApp/src/app/home/components/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="home-container">
     <div class="input-group input-group-lg search-input-group">
-        <input type="text" class="form-control" aria-label="Search App Service Diagnostics" placeholder="Search App Service Diagnostics" [ngModel]="searchValue" (ngModelChange)="updateSearchValue($event)" (focus)="onSearchBoxFocus(event)">
+        <input tabindex="100" type="text" class="form-control" aria-label="Search App Service Diagnostics" placeholder="Search App Service Diagnostics" [ngModel]="searchValue" (ngModelChange)="updateSearchValue($event)" (focus)="onSearchBoxFocus(event)">
         <div class="input-group-btn">
-            <button class="btn btn-default" type="button" (click)="clearSearch()"><i class="fa fa-close"></i></button>
+            <button class="btn btn-default" type="button" aria-label="Clear" title="Clear" tabindex="101" (click)="clearSearch()"><i class="fa fa-close"></i></button>
         </div>
     </div>
     <div *ngIf="!searchBoxFocus else searchResults">
