--- a/AngularApp/src/app/shared/components/solutions-expandable/solutions-expandable.component.html
+++ b/AngularApp/src/app/shared/components/solutions-expandable/solutions-expandable.component.html
@@ -1,10 +1,10 @@
-<div class="focus-box focus-box-info" style="background-color: #f4fcff" *ngIf="allSolutionsUIModels">
+<div class="focus-box focus-box-info" *ngIf="allSolutionsUIModels">
     <h4 class="not-bold" *ngIf="allSolutionsUIModels && allSolutionsUIModels.length === 0">We were not able to determine solutions specific to your problem. Please look into the solutions to common problems below.</h4>
     <expandable-list [title]="title" *ngIf="allSolutionsUIModels && allSolutionsUIModels.length > 0">
-        <expandable-list-item *ngFor="let solution of allSolutionsUIModels; let i = index" [title]="solution.properties.title" [titleColor]="'#00b5ea'" [selected]="i == 0" (onSelected)="solution.logExpandSolutionEvent($event)">
+        <expandable-list-item *ngFor="let solution of allSolutionsUIModels; let i = index" [title]="solution.properties.title" [titleColor]="'#337ab7'" [selected]="i == 0" (onSelected)="solution.logExpandSolutionEvent($event)">
             {{solution.properties.description}}
             <div class="col" *ngIf="solution.properties.actionText" style="margin-top:10px">
-                <button type="button" class="btn btn-info" (click)="solution.execute()">
+                <button type="button" class="btn btn-primary" (click)="solution.execute()">
                     <i *ngIf="solution.properties.actionType === 1" class="fa fa-play" aria-hidden="true"></i>
                     {{solution.properties.actionText}}  
                     <i *ngIf="solution.properties.actionType === 2" class="fa fa-chevron-right" aria-hidden="true"></i>
