--- a/AngularApp/src/app/shared/components/timespan/timespan.component.html
+++ b/AngularApp/src/app/shared/components/timespan/timespan.component.html
@@ -1,5 +1,5 @@
 <input type="number" min="1" [ngModel]="Seconds" [placeholder]="placeholder" 
-(ngModelChange)="updateTimeSpan($event)">
+(ngModelChange)="updateTimeSpan($event)" [attr.aria-label]="label">
 <span style="color:red">*</span>
 <div style="margin-top:5px" *ngIf="Seconds <=0" class="alert alert-danger">
     Duration should be greater than 0 seconds
