--- a/AngularApp/src/app/supportbot/message-flow/document-search/document-search.component.css
+++ b/AngularApp/src/app/supportbot/message-flow/document-search/document-search.component.css
@@ -15,7 +15,7 @@ textarea {
     align-items: center;
     justify-content: center;
     height: 70%;
-    color: #a0a0a0;
+    color: #656565;
     font-size: 16px;
 }
 
@@ -47,5 +47,5 @@ textarea {
 }
 
 .article-link {
-    color: #878787
+    color: #646464
 }
