Adding Card Selection

--- a/AngularApp/projects/app-service-diagnostics/src/styles/common/_variables.scss
+++ b/AngularApp/projects/app-service-diagnostics/src/styles/common/_variables.scss
@@ -211,6 +211,8 @@ $card-header-title-font-size: 14px;
 $card-header-title-font-weight: 600;
 $card-header-title-height: 41px;
 
+$card-header-title-color: $primary-color;
+
 // Card description
 $card-description-border-top-style: solid;
 $card-description-border-top-width: 1px;
