--- a/AngularApp/projects/diagnostic-data/src/lib/components/star-rating/star-rating.component.html
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/star-rating/star-rating.component.html
@@ -1,7 +1,7 @@
 <div *ngIf="!showThanksMessage">
     <div class="review-header" *ngIf="!isModal">
-        <h1>
-            How helpful was this?</h1>
+        <!-- <h1>
+            How helpful was this?</h1> -->
     </div>
     <div class="review-container">
         <div class="row" style="padding: 15px, 0px, 15px, 15px;max-width: 630px; border-right: rgb(169, 169, 169); margin-left:0px">
