--- a/AngularApp/projects/diagnostic-data/src/lib/components/feedback/feedback.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/feedback/feedback.component.scss
@@ -1,24 +1,14 @@
+
+
 fieldset, label { margin: 0; padding: 0; }
 body{ margin: 20px; }
-h1 { font-size: 1.2em; margin: 10px; }
 
-/****** Style Star Rating Widget *****/
 
-a:visited {
-    color: rgb(196, 62, 0);
+.custom-button-align-left {
+  margin-left: 0px
 }
-
-a:hover {
-    text-decoration: underline;
-    color: rgb(196, 62, 0);
-} 
-
-.visited {
-    color: rgb(113, 34, 153);
-}
-
 .review-container {
-  max-width: 630px;
+ // max-width: 630px;
     border: 1px solid rgb(223, 223, 223);
     border-top: none;
     border-bottom: 2px solid rgb(223, 223, 223);
@@ -49,17 +39,25 @@ textarea:focus {
 }
 
 .review-header {
-  margin-top:20px;
-  background-color: #3c8dbc;
-  border: 1px solid #3c8dbc;
-  color:white;
-  min-height: 42px;
-  max-width: 630px;
+  margin-top:10px;
+  // background-color: #016afe;
+  // border: 1px solid #016afe;
+  // color:white;
+  min-height: 20px;
+  //max-width: 630px;
+  border-radius: 2px;
+  background-color: #f5f5f5;
+  border-color: #ddd;
+  // border: 1px solid rgb(169, 169, 169);
+  border: 1px solid rgb(223, 223, 223);
 }
 
 .review-header > h1 {
-  color:white;
   font-weight: 500;
+  padding: 10px 5px;
+  margin: 0px;
+  font-size: 12px;
+  font-family: "Segoe UI", "Segoe", Tahoma, Helvetica, Arial, sans-serif;
 }
 
 .review-container > h1 {
@@ -99,10 +97,4 @@ textarea:focus {
 .rating:not(:hover) > input:checked ~ label  { color: #FFD700;  } /* show gold star when clicked */
 .rating:not(:checked) > label:hover ~ label { color: #FFED85;  } /* hover previous stars in list */
 .rating:not(:checked) > label:hover { color: #FFED85;  } /* hover current star */
-
-/* .rating > input:checked + label:hover,   hover current star when changing rating
- .rating > input:checked ~ label:hover,
-.rating > label:hover ~ input:checked ~ label,  lighten current selection
-.rating > input:checked ~ label:hover ~ label { color: #FFED85;  }  */
-
 
