--- a/AngularApp/projects/diagnostic-data/src/lib/components/insights/insights.component.scss
+++ b/AngularApp/projects/diagnostic-data/src/lib/components/insights/insights.component.scss
@@ -59,6 +59,8 @@ td {
 
 /*tooltip Box*/
 .con-tooltip {
+  padding-left: 10px;
+  padding-right: 10px;
   border-radius: 9px;
   transition: all 0.3s ease-in-out;
   cursor: default;
